--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,700;1,700&display=swap');
 
-h1 {
+h1, h5 {
     text-align: center;
 }
 
@@ -34,4 +34,16 @@ body {
 
 h3 {
     margin-right: 10px;
+}
+
+.res {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.res h2 {
+    margin: 0 0 0 0;
 }
