--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -12,7 +12,7 @@
     <br>
     <div class="clu">
        <a href="<%= locals.baseUrl %>calc-subnet"><h4>Calcolatore SubnetMak</h4></a>
-       <a href=""><h4>Convertitore Numerico</h4></a>
+       <a href="<%= locals.baseUrl %>converter"><h4>Convertitore Numerico</h4></a>
     </div>
 </body>
 </html>
